# jet3d-devel

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  JStudioClassic7.sln  JStudioClassic7_2013.sln  JStudioClassic7_2019.sln  LICENSE  README.md
dependencies/: CMakeLists.txt
source/Engine/JetEngine/: AVIFILE.H  AVIFILE.cpp  CMakeLists.txt  CSNetMgr.h  CSNetMgr.unused  Camera - Copy.cpp  Camera._h  Camera.cpp  DLLDATA.unused  DLLMain.cpp  DRAWBBOX.unused  Jet3D.dsp  Jet3D.vcproj  Jet3D.vcxproj  Jet3D.vcxproj.filters  Jet3D_2013.vcxproj  Jet3D_2013.vcxproj.filters  Jet3D_2019.vcxproj.filters  List.c  List.cpp  List.h  Netplay.cpp  Netplay.h  OGGStream.cpp  OGGStream.h  Object.cpp  Ptrtypes.h  Report.cpp  Report.h  Sound.cpp  Sound3d.cpp  TClip.cpp  TClip.h  Timer.cpp  Timer.h  Tsc.cpp  Tsc.h  UVMap.cpp  UVMap.h  jet.aps  (+2 more)
source/Engine/JetEngine/Actor/: Actor._h  Actor.cpp  ActorObj.cpp  ActorObj.h  ActorObjLists.h  ActorPropertyList.h  ActorUtil.h  BODY._H  Body-Cyrius.cpp  Body.cpp  BodyInst.cpp  BodyInst.h  Motion.cpp  Motion.h  Path.cpp  Pose.cpp  Pose.h  Puppet.cpp  Puppet.h  QKFrame.cpp  QKFrame.h  StrBlock.cpp  StrBlock.h  TKArray.cpp  TKArray.h  TKEvents.cpp  TKEvents.h  VKFrame.cpp  VKFrame.h  XFArray.cpp  XFArray.h
source/Engine/JetEngine/Bitmap/: Bitmap.__h  Bitmap._h  Bitmap.c  Bitmap.cpp  PixelFormat.c  PixelFormat.cpp  bitmap_blitdata.c  bitmap_blitdata.cpp  bitmap_blitdata.h  bitmap_gamma.c  bitmap_gamma.cpp  bitmap_gamma.h
source/Engine/JetEngine/Bsp/: jeBSP._h  jeBSP.cpp  jeBSPNode.cpp  jeBSPNode_Area.cpp  jeBSPNode_DrawFace.cpp  jeBSPNode_Face.cpp  jeBSPNode_Leaf.cpp  jeBSPNode_Light.cpp  jeBSPNode_Portal.cpp  jeBSP_Brush.cpp  jeBSP_TopBrush.cpp
source/Engine/JetEngine/Curve/: Curve.h  Curve.unused
source/Engine/JetEngine/Effect/: Effect.h  Effect.unused  EffectC.cpp  EffectC.h  EffectI.h  EffectM.h  EffectM.unused  EffectMI.h
source/Engine/JetEngine/Engine/: BitmapList.cpp  BitmapList.h  Engine._h  Engine.cpp  FontBmp.cpp  jeImage.cpp  jeImageImpl.h  jePolyMgr.cpp  jePolyMgr.h  jeTexture.cpp  jeVertexBufferImpl.cpp  jeVertexBufferImpl.h  jet3d_splash_03.cpp  splash_bmp_BAK_JAN_2011.unused
source/Engine/JetEngine/Math/: ASMXForm3d.asm  Box.cpp  Box.h  ExtBox-gcc.unused  ExtBox.cpp  ObjectPos.cpp  Quatern.cpp  Vec2d.cpp  Vec2d.h  Vec3d.cpp  Xform3d.cpp  asmxform3d.cpp  asmxform3d.h  crc32.cpp  crc32.h  jeRay.cpp  jeVec3d.cpp  jeVec3d_Katmai.cpp  jeVec3d_Katmai.h
source/Engine/JetEngine/Mp3Mgr/: Mp3Mgr.cpp  Mp3Mgr_h.h
source/Engine/JetEngine/Particle/: jeParticle.cpp
source/Engine/JetEngine/Physics/: Part.cpp  Part.h  Spring.cpp  Spring.h
source/Engine/JetEngine/RogerWilco/: RogerWilco.cpp  (+1 more)
source/Objects/: CMakeLists.txt
source/Objects/ActorObj/: ActorObj.dsp  ActorObj.dsw  ActorObj.sln  ActorObj.vcproj  ActorObj.vcxproj  ActorObj.vcxproj.filters  ActorObj_2013.vcxproj  ActorObj_2019.vcxproj  CMakeLists.txt  ObjectDef.c  ObjectDef.cpp  ObjectDef.h
source/Objects/AmbObject/: AmbObject.c  AmbObject.cpp  AmbObject.dsp  AmbObject.h  AmbObject.rc  AmbObject.sln  AmbObject.vcproj  AmbObject.vcxproj  AmbObject.vcxproj.filters  AmbObject_2013.vcxproj  AmbObject_2019.vcxproj  CMakeLists.txt  ObjectDef.cpp  ObjectDef.h  RESOURCE.H  Snd.c  Snd.h
source/Objects/BoxObject/: BoxObject.c  BoxObject.cpp  BoxObject.dsp  BoxObject.h  BoxObject.rc  BoxObject.rsrc  BoxObject.vcproj  BoxObject.vcxproj  BoxObject.vcxproj.filters  BoxObject_2013.vcxproj  BoxObject_2019.vcxproj  CMakeLists.txt  ObjectDef.c  ObjectDef.h  Resource.h
source/Objects/CamObject/: CMakeLists.txt  CamObject.c  CamObject.cpp  CamObject.dsp  CamObject.h  CamObject.rc  CamObject.rsrc  CamObject.vcproj  CamObject.vcxproj  CamObject.vcxproj.filters  CamObject_2013.vcxproj  CamObject_2019.vcxproj  ObjectDef.c  ObjectDef.cpp  resource.h
source/Objects/Corona/: CMakeLists.txt  Corona.dsp  Corona.vcproj  Corona.vcxproj  Corona.vcxproj.filters  Corona_2013.vcxproj  Corona_2019.vcxproj
source/Objects/DynamicLight/: CMakeLists.txt  DynamicLight.dsp  DynamicLight.vcproj  DynamicLight.vcxproj  DynamicLight.vcxproj.filters  DynamicLight_2013.vcxproj  DynamicLight_2019.vcxproj
source/Objects/ModelObject/: CMakeLists.txt  ModelObject.dsp  ModelObject.vcproj  ModelObject.vcxproj  ModelObject.vcxproj.filters  ModelObject_2013.vcxproj  ModelObject_2019.vcxproj
source/Objects/PathObject/: CMakeLists.txt  Channel.h  CursorPlus.CUR  ObjectDef.c  ObjectDef.h  PathObj.c  PathObj.cpp  PathObj.h  PathObj.rc  PathObject.dsp  PathObject.vcproj  PathObject.vcxproj  PathObject.vcxproj.filters  PathObject_2013.vcxproj  PathObject_2019.vcxproj  Resource.h  Trigger.c  Trigger.cpp  Trigger.h
source/Objects/Portals/: CMakeLists.txt  ObjectDef.c  ObjectDef.h  PortalObject.c  PortalObject.cpp  PortalObject.h  Portals.dsp  Portals.vcproj  Portals.vcxproj  Portals.vcxproj.filters  Portals_2013.vcxproj  Portals_2019.vcxproj
source/Objects/PulsingLight/: CMakeLists.txt  PulsingLight.dsp  PulsingLight.dsw  PulsingLight.plg  PulsingLight.sln  PulsingLight.vcproj  PulsingLight.vcxproj  PulsingLight.vcxproj.filters  PulsingLight_2013.vcxproj  PulsingLight_2019.vcxproj  ReadMe.txt
source/Objects/Spout/: CMakeLists.txt  Spout.dsp  Spout.vcproj  Spout.vcxproj  Spout.vcxproj.filters  Spout_2013.vcxproj  Spout_2019.vcxproj
source/Objects/StaticMesh/: ObjectDef.cpp  ObjectDef.h  StaticMesh.vcproj  StaticMesh.vcxproj  StaticMesh.vcxproj.filters  StaticMeshObj.c  StaticMeshObj.cpp  StaticMeshObj.h  StaticMesh_2013.vcxproj  StaticMesh_2019.vcxproj
source/Objects/Terrain/: CMakeLists.txt  terrainobj.dsp  terrainobj.vcproj  terrainobj.vcxproj  terrainobj.vcxproj.filters  terrainobj_2013.vcxproj  terrainobj_2019.vcxproj
source/Tools/ActorTools/: AStudio.dsp  AStudio.mak  AStudio.vcproj  AStudio.vcxproj  AStudio.vcxproj.filters  AStudio_2013.vcxproj  AStudio_2019.vcxproj  AStudio_2019.vcxproj.filters  ActBuild.dsp  ActBuild.mak  ActBuild.vcproj  ActBuild.vcxproj  ActBuild.vcxproj.filters  ActBuild_2013.vcxproj  ActBuild_2019.vcxproj  ActBuild_2019.vcxproj.filters  CMakeLists.txt  Update_Jet_Files.bat
(+953 files in other folders)
