add_subdirectory(ActorObj)
add_subdirectory(AmbObject)
add_subdirectory(BoxObject)
add_subdirectory(CamObject)
add_subdirectory(Corona)
add_subdirectory(DynamicLight)
add_subdirectory(ModelObject)
add_subdirectory(PathObject)
add_subdirectory(Portals)
add_subdirectory(PulsingLight)
add_subdirectory(Spout)
add_subdirectory(Terrain)
