message("ActBuild Tool build")

file(GLOB ASTUDIO_UTIL_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/AStudio/Util/*.cpp)
file(GLOB ATOOLS_COMMON_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/Common/*.cpp)
file(GLOB ATOOLS_MKACTOR_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/MKACTOR/*.cpp)
file(GLOB ATOOLS_MKBODY_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/MKBODY/*.cpp)
file(GLOB ATOOLS_MKMOTION_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/MKMOTION/*.cpp)
file(GLOB ATOOLS_MOP_SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/MOP/*.cpp)

set(ACTBUILD actbuild)

add_executable(${ACTBUILD}
    ${CMAKE_CURRENT_LIST_DIR}/ActBuild/ActBuild.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AStudio/AOptions.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AStudio/AProject.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AStudio/Make.cpp
    ${CMAKE_CURRENT_LIST_DIR}/AStudio/mxscript.cpp
    ${ASTUDIO_UTIL_SRC_FILES}
    ${ATOOLS_COMMON_SRC_FILES}
    ${ATOOLS_MKACTOR_SRC_FILES}
    ${ATOOLS_MKBODY_SRC_FILES}
    ${ATOOLS_MKMOTION_SRC_FILES}
    ${ATOOLS_MOP_SRC_FILES}
)

target_include_directories(${ACTBUILD}
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/ActBuild
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/AStudio
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/AStudio/Util
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/Common
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/FMTACTOR
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/MKACTOR
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/MKBODY
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/MKMOTION
    PUBLIC ${CMAKE_CURRENT_LIST_DIR}/MOP
)

target_link_directories(${ACTBUILD}
    PUBLIC ${CMAKE_SOURCE_DIR}/lib
)

target_link_libraries(${ACTBUILD}
    winmm
    Jet3d
)

target_compile_definitions(${ACTBUILD} PUBLIC
    _CRT_SECURE_NO_DEPRECATE
    _CRT_SECURE_NO_WARNINGS
    ACTBUILD
)

install (TARGETS ${ACTBUILD} 
    RUNTIME DESTINATION "bin"
)
